# openapi_generator

./: .gitignore  Cargo.toml  README.md  default.nix  justfile  openapi.yaml  shell.nix  vizyr_openapi.json
generated_client/: Cargo.toml
generated_client/src/: lib.rs  main.rs
generated_server/: Cargo.toml
generated_server/src/: main.rs
output/: Cargo.toml  lib.rs  main.rs
output/client/: blocking.rs  mod.rs
output/examples/: client.rs
output/models/: mod.rs
output/server/: mod.rs
src/: helpers.rs  main.rs  openapi_generator.rs
template/: data_type.rs.hbs  main.rs.hbs  operation_types.rs.hbs  parameter_type.rs.hbs  schema.rs.hbs
template/partials/: data_type.hbs  example.hbs  operation_types.hbs  schema.hbs  schema_example.hbs  subtypes.hbs  test_operation_client.hbs  test_operation_client_success.hbs
template/template/: Cargo.toml  lib.rs  main.rs  openapi_serialization.rs
template/template/client/: blocking.rs  mod.rs  tests.rs
template/template/examples/: client.rs
template/template/models/: examples.rs  mod.rs
template/template/server/: mod.rs
templates/rust/partials/: data_type.hbs  example.hbs  operation_types.hbs  parameter_type.hbs  schema.hbs  subtypes.hbs  test_operation_client.hbs
templates/rust/template/: Cargo.toml  lib.rs  openapi_serialization.rs
templates/rust/template/client/: blocking.rs  interface.rs  mod.rs  reqwest.rs  surf.rs  tests.rs
templates/rust/template/extractors/: mod.rs
templates/rust/template/models/: mod.rs
templates/rust/template/security/: mod.rs
templates/rust/template/server/: mock.rs  mod.rs
