[package]
name = "openapi_generator"
version = "0.1.1-alpha.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
repository = "https://gitlab.com/easymov/openapi_generator"
description = "Code generator for OpenAPI specifications"
keywords = ["openapi", "swagger", "generator"]
categories = ["template-engine", "web-programming"]

[dependencies]
anyhow = "1.0.34"
handlebars = "2.0.2"
heck = "0.3.1"
pretty_env_logger = "0.4.0"
serde_json = "1.0.59"
json-pointer = "0.3.4"
serde_yaml = "0.8.14"
walkdir = "2.3.1"
log = "0.4.11"
structopt = "0.3.20"
regex = "1.4.2"
