[package]
name = "generated_server"
version = "0.1.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.9"
serde = { version = "1.0.102", features = ["derive"] }
actix-service = "0.4.2"
actix-http  = "0.2.11"