[package]
name = "{{snakecase info.title}}"
version = "0.1.0"
authors = ["{{author}}"]
edition = "2018"

[[bin]]
name = "server"
path = "main.rs"

[lib]
name = "{{snakecase info.title}}"
path = "lib.rs"

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
actix-web = { version = "1.0.9", optional = true }
actix-service = { version = "0.4.2", optional = true }
actix-http  = { version = "0.2.11", optional = true }
surf = { version = "1.0.3", optional = true }
async-std = { version = "1.1.0", optional = true }
femme = "1.3.0"
log = "0.4.8"

[features]
default = ["server", "client"]
server = ["actix-web", "actix-service", "actix-http"]
client = ["surf", "async-std"]