# Generated with openapi_generator {{openapi_generator_version}}

[package]
name = "{{snakecase info.title}}"
version = "{{info.version}}"
{{~#with info.contact}}
authors = ["{{name}}{{#if email}} <{{email}}>{{/if}}"]
{{~/with}}
edition = "2018"

[[bin]]
name = "server"
path = "main.rs"

[lib]
name = "{{snakecase info.title}}"
path = "lib.rs"

[dependencies]
async-std = { version = "1.4.0", optional = true }
actix-http = { version = "1.0.1", optional = true }
actix-rt = "1.0.0"
actix-service = { version = "1.0.1", optional = true }
actix-web = { version = "2.0.0", optional = true }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.44", optional = true }
surf = { version = "1.0.3", optional = true }
async-std = { version = "1.1.0", optional = true }
serde_json = { version = "1.0.42", optional = true }
url = { version = "2.1.0", optional = true }
mockiato = { version = "0.9.5", optional = true }

[dev-dependencies]
femme = "1.3.0"
log = "0.4.8"
mockito = "0.22.0"

[features]
default = ["server", "client"]
server = ["actix-web", "actix-service", "actix-http"]
client = ["surf", "async-std", "url", "mockiato"]
example = ["serde_json"]
