# Generated with openapi_generator {{openapi_generator_version}}

[package]
name = "{{snakecase info.title}}"
version = "{{info.version}}"
{{~#with info.contact}}
authors = ["{{name}}{{#if email}} <{{email}}>{{/if}}"]
{{~/with}}
edition = "2018"

[lib]
name = "{{snakecase info.title}}"
path = "lib.rs"

[dependencies]
actix-http = { version = "1.0.1", optional = true }
actix-rt = "1.0.0"
actix-service = { version = "1.0.5", optional = true }
actix-web = { version = "2.0.0", optional = true }
async-std = { version = "1.5.0", optional = true }
async-trait = { version = "0.1.24", optional = true }
displaydoc = { version = "0.1.5", optional = true }
mockiato = { version = "0.9.5", optional = true }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.48" }
surf = { version = "1.0.3", optional = true }
thiserror = { version = "1.0.11", optional = true }
url = { version = "2.1.1", optional = true }
mockito = { version = "0.22.0", optional = true }
log = {version = "0.4.8", optional = true}
serde_urlencoded = { version = "0.6.1", optional = true }

[dependencies.reqwest]
features = ["json", "blocking"]
version = "0.10.1"
optional = true

[dev-dependencies]
femme = "1.3.0"

[features]
default = ["server"]
server = ["actix-web", "actix-service", "actix-http", "async-trait"]
surf-client = [
    "surf",
    "async-std",
    "url",
    "mockiato",
    "thiserror",
    "displaydoc",
    "serde_urlencoded"]
reqwest-client = [
    "reqwest",
    "async-std",
    "url",
    "mockiato",
    "thiserror",
    "displaydoc",
    "serde_urlencoded",
    "log"]
mock-server = ["log", "mockito"]
